@@ -1,5 +1,9 @@
 2012-07-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* datrie/trie.c: Reformat source.
+
+2012-07-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* datrie/trie.h, datrie/trie.c (trie_state_walkable_chars):
 	Reformat source.
 
